# sport

./: .gitignore  LICENSE  README.md  convex_minimization_timing.ipynb  omnisafe-conda-recipe.yaml  pyproject.toml
conda_envs/: rl_vcf.yaml  rl_vcf.yml  sport.yaml
conda_envs/deprecated/: conda-recipe.yaml  ltlf_dfa_python.yaml
mini_project_scripts/: convex_minimization_example.ipynb  convex_minimization_many_examples.ipynb  convex_minimization_timing.ipynb
notebooks/: README.md  preliminary_experiment.ipynb
notebooks/envs/: comparing_validation_over_alphas.ipynb  comparing_validation_over_alphas_fixed_env.ipynb  comparing_validation_over_alphas_low_freq_fixed_env.ipynb  episode_trajectory_distribution_visualization.ipynb  extract_frames_for_interpreting_policy_projection.ipynb  plotting_episodic_return.ipynb  plotting_policy_projection.ipynb  safety_gymnasium.ipynb  split_and_recombine_actions.ipynb  testing_arrays.ipynb  testing_opencv.ipynb  testing_validation.ipynb
notebooks/ltlf_dfa/: construct_dfa_from_str.ipynb  labelled_env.ipynb  testing_ltlf_dfa.ipynb
notebooks/policy_projection/: convex_minimization_example.ipynb  convex_minimization_timing.ipynb
notebooks/torch/: saving_loading.ipynb  torch_basics.ipynb
policy_projection/: convex_minimization_example.ipynb  convex_minimization_many_examples.ipynb  convex_minimization_timing.ipynb  practicality_check.ipynb
src/rl_vcf/: ppo.py  ppo_continuous_action.py  ppo_discrete_action.py  ppo_train.py  projected_ppo_finetune.py  projected_ppo_validate.py  sac.py  sac_safety_train.py  sac_safety_validate.py  (+1 more)
test/: omnisafe_basics.ipynb  torch_basics.ipynb
(+118 files in other folders)
