[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_vcf"
version = "0.0.1"
authors = [{ name = "Jacques Cloete", email = "jacques@robots.ox.ac.uk" }]
maintainers = [{ name = "Jacques Cloete", email = "jacques@robots.ox.ac.uk" }]
description = "Reinforcement Learning with scenario-based Validation and projection-based Constrained Finetuning."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["safety-gymnasium == 1.2.0"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
