[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sport"
version = "1.0.0"
authors = [{ name = "Jacques Cloete", email = "jacques@robots.ox.ac.uk" }]
maintainers = [{ name = "Jacques Cloete", email = "jacques@robots.ox.ac.uk" }]
description = "SPoRt - Safe Policy Ratio: Certified Training and Deployment of Task Policies in Model-Free RL."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["safety-gymnasium == 1.2.0"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
